[package]
name = "substarte-util"
version = "0.1.0"
authors = ["wyj <asamuj27@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
scrypt = "0.11.0"
base64 = "0.22.1"
hex = "*"
xsalsa20poly1305 = "0.9.1"
num = "0.4"
sp-core = "*"
rand = "*"
schnorrkel = "*"
anyhow = "*"
thiserror = "*"
clap = { version = "4.5.13", features = ["derive"] }
